# authoring-tool

./: .env  .gitignore  AGENTS.md  CODE_REVIEW.md  Dockerfile  FIX_PLAN.md  HEALTH_CHECK.md  LICENSE  PLAN.md  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  install.md  sample.env
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: docker-build-and-push.yml
USER_GUIDE/: USER_GUIDE.md
backend/: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  apps.py  gpx_utils.py  model_utils.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/management/: __init__.py
backend/api/management/commands/: __init__.py  addwhitelist.py  removewhitelist.py  seed_activities.py  viewusers.py  viewwhitelist.py
backend/api/migrations/: 0001_initial.py  0002_folder_activity_folder_folderpermission_and_more.py  0002_folder_activity_folder_folderteampermission_and_more.py  0002_folder_activity_folder_group_folderpermission_and_more.py  0002_folder_models.py  0002_whitelistedemail.py  0003_alter_folderpermission_group_and_more.py  0003_remove_folder_unique_folder_name_per_parent_and_more.py  0003_user.py  0004_update_folder_root_name_unique.py
backend/api/tests/: __init__.py  base.py  test_activity_sharing.py  test_admin.py  test_folder_api.py  test_folder_api_additional.py  test_folder_permissions.py  test_runtime_config_api.py  test_user_search.py  test_waypoint_access.py  test_waypoint_reorder.py
backend/backend/: asgi.py  urls.py  views.py  wsgi.py
backend/backend/middleware/: UserAllowlistMiddleware.py  UserParseMiddleware.py
backend/backend/settings/: __init__.py  base.py  development.py  local.py  production.py
backend/files/: apps.py  urls.py  views.py
backend/frontend/: apps.py  urls.py  views.py
backend/map/: apps.py  urls.py  views.py
backend/users/: __init__.py  adapters.py  admin.py  apps.py  models.py  test_auth_flow.py  tests.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_group_groupmembership.py  0003_team_teammembership.py
frontend/: .eslintrc.json  .prettierrc.json  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.css  index.js  index.jsx  reportWebVitals.js  setupTests.js
frontend/src/api/: API.js  Auth.js  axiosDefaults.js
frontend/src/data/: Activity.js  Waypoint.js  WaypointMedia.js  WaypointsGroup.js
(+105 files in other folders)
